//  Copyright (C) 2020 Maker Ecosystem Growth Holdings, INC.
//
//  This program is free software: you can redistribute it and/or modify
//  it under the terms of the GNU Affero General Public License as
//  published by the Free Software Foundation, either version 3 of the
//  License, or (at your option) any later version.
//
//  This program is distributed in the hope that it will be useful,
//  but WITHOUT ANY WARRANTY; without even the implied warranty of
//  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
//  GNU Affero General Public License for more details.
//
//  You should have received a copy of the GNU Affero General Public License
//  along with this program.  If not, see <http://www.gnu.org/licenses/>.

syntax = "proto3";

option go_package = "github.com/chronicleprotocol/oracle-suite/pkg/transport/libp2p/messages/pb";

message Price {
  // Price:
  string wat = 1; // asset name
  bytes val = 2; // big.Int encoded as bytes
  int64 age = 3; // timestamp

  // Ethereum Signature:
  bytes vrs = 4; // v, r, s combined into one byte array

  // Starknet Signature:
  bytes starkR = 5;
  bytes starkS = 6;
  bytes starkPK = 7;

  // Additional data:
  bytes trace = 8;
  string version = 9;
}

message Event {
  message Signature {
    bytes signer = 1;
    bytes signature = 2;
  }

  string type = 1;
  bytes id = 2;
  bytes index = 3;
  int64 eventTimestamp = 4;
  int64 messageTimestamp = 5;
  map<string, bytes> data = 6;
  map<string, Signature> signatures = 7;
}
